tests/tests/ui/create_scoped_not_scope.stderr
error[E0277]: the trait bound `i64: toasty::schema::ValidateCreate` is not satisfied
  --> tests/ui/create_scoped_not_scope.rs:11:13
   |
11 |     let _ = toasty::create!(in 42_i64 { name: "Carl" });
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `toasty::schema::ValidateCreate` is not implemented for `i64`
   |
   = help: the following other types implement trait `toasty::schema::ValidateCreate`:
             Many
             One
             OptionOne
             UserFields<__Origin>
             UserListFields<__Origin>
note: required by a bound in `__force_check`
  --> tests/ui/create_scoped_not_scope.rs:11:13
   |
11 |     let _ = toasty::create!(in 42_i64 { name: "Carl" });
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `__force_check`
   = note: this error originates in the macro `toasty::create` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `i64: toasty::schema::Scope` is not satisfied
  --> tests/ui/create_scoped_not_scope.rs:11:32
   |
11 |     let _ = toasty::create!(in 42_i64 { name: "Carl" });
   |                                ^^^^^^ the trait `toasty::schema::Scope` is not implemented for `i64`
   |
help: the trait `toasty::schema::Scope` is implemented for `toasty::HasMany<T>`
  --> $WORKSPACE/crates/toasty/src/schema/has_many.rs
   |
   | impl<T: Relation> Scope for HasMany<T> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `toasty::codegen_support::scope_fields`
  --> $WORKSPACE/crates/toasty/src/lib.rs
   |
   |     pub fn scope_fields<S: Scope>(_scope: &S) -> S::Path<S::Item> {
   |                            ^^^^^ required by this bound in `scope_fields`

error[E0599]: no method named `create` found for type `i64` in the current scope
  --> tests/ui/create_scoped_not_scope.rs:11:32
   |
11 |     let _ = toasty::create!(in 42_i64 { name: "Carl" });
   |                                ^^^^^^ method not found in `i64`
